# copang-product

./: main.py  pyproject.toml
api/: constructor.py
api/product/: product.py  productController.py
application/: exceptions.py
application/product/: productException.py  productService.py
container/: constructor.py
container/product/: productContainer.py
container/token/: tokenContainer.py
core/: AppConfig.toml  Postgresql.toml  tokenConfig.toml
domain/product/: productRepo.py  productService.py
domain/product/repo/: product.py  productRepo.py
domain/product/service/: product.py  productService.py
domain/token/service/: token.py  tokenService.py
infra/: exceptions.py
infra/postgresql/: core.py  postgresql.py
infra/postgresql/product/: productRepo.py  productSchema.py
infra/token/: token.py  tokenException.py  tokenService.py
tool/app/: app.py  appConsturctor.py  argParser.py  routeInjector.py
tool/postgresql/: initializer.py  postgresql.py
